--- a/lib/gotik_web/templates/pointer/form.html.heex
+++ b/lib/gotik_web/templates/pointer/form.html.heex
@@ -1,19 +1,28 @@
 <.form let={f} for={@changeset} action={@action}>
   <%= if @changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
+    <div class="p-4 rounded-md bg-red-100 flex gap-4 mb-4">
+      <svg class="h-5 w-5 mt-0.5 text-red-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+        <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" />
+      </svg>
+      <p class="text-red-800">Something went wrong.</p>
     </div>
   <% end %>
 
-  <%= label f, :name %>
-  <%= text_input f, :name %>
-  <%= error_tag f, :name %>
+  <div class="w-50 gap-y-2 flex flex-col">
+    <div>
+      <%= label f, :name %>
+      <%= text_input f, :name, class: "rounded-md h-9 focus:ring-0" %>
+      <%= error_tag f, :name %>
+    </div>
 
-  <%= label f, :destination %>
-  <%= text_input f, :destination %>
-  <%= error_tag f, :destination %>
+    <div>
+      <%= label f, :destination %>
+      <%= text_input f, :destination, class: "rounded-md h-9" %>
+      <%= error_tag f, :destination %>
+    </div>
+  </div>
 
   <div>
-    <%= submit "Save" %>
+    <%= submit "Save", class: "px-3 py-1.5 rounded-md bg-green-200 text-green-600" %>
   </div>
 </.form>
