--- a/lib/gotik_web/templates/layout/root.html.heex
+++ b/lib/gotik_web/templates/layout/root.html.heex
@@ -5,26 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <%= csrf_meta_tag() %>
-    <%= live_title_tag assigns[:page_title] || "Gotik", suffix: " · Phoenix Framework" %>
+    <%= live_title_tag assigns[:page_title] || "Gotik" %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
-  <body>
-    <header>
-      <section class="container">
-        <nav>
-          <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-            <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
-              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
-            <% end %>
-          </ul>
-        </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
-          <img src={Routes.static_path(@conn, "/images/phoenix.png")} alt="Phoenix Framework Logo"/>
-        </a>
-      </section>
+  <body class="w-full bg-neutral-900 text-neutral-400">
+    <header class="py-4 mb-6 bg-neutral-800">
+      <div class="w-4/5 mx-auto">
+        <h1 class="text-xl font-semibold text-white">
+          Gootik.xyz go links!
+        </h1>
+      </div>
     </header>
-    <%= @inner_content %>
+    <div class="container mx-auto">
+      <div class="w-4/5 mx-auto">
+        <%= @inner_content %>
+      </div>
+    </div>
   </body>
 </html>
