--- a/lib/gotik_web/templates/pointer/index.html.heex
+++ b/lib/gotik_web/templates/pointer/index.html.heex
@@ -1,28 +1,40 @@
-<h1>Listing Pointers</h1>
+<div class="w-4/5 mx-auto">
+  <div class="flex mb-8">
+    <h2 class="text-lg font-semibold pb-2 flex-1">All Pointers</h2>
+    <%= link to: Routes.pointer_path(@conn, :new) do %>
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-green-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+      </svg>
+    <% end %>
+  </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Destination</th>
-
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-<%= for pointer <- @pointers do %>
-    <tr>
-      <td><%= pointer.name %></td>
-      <td><%= pointer.destination %></td>
-
-      <td>
-        <span><%= link "Show", to: Routes.pointer_path(@conn, :show, pointer) %></span>
-        <span><%= link "Edit", to: Routes.pointer_path(@conn, :edit, pointer) %></span>
-        <span><%= link "Delete", to: Routes.pointer_path(@conn, :delete, pointer), method: :delete, data: [confirm: "Are you sure?"] %></span>
-      </td>
-    </tr>
-<% end %>
-  </tbody>
-</table>
-
-<span><%= link "New Pointer", to: Routes.pointer_path(@conn, :new) %></span>
+  <%= for pointer <- @pointers do %>
+    <div class="bg-neutral-300 rounded-md p-6 text-neutral-800 mb-6 shadow-md">
+      <div class="flex flex-row">
+        <div class="columns-3 mb-4 flex-1">
+          <strong>go/<%= pointer.name %></strong>
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+          </svg>
+          <span><%= pointer.destination %></span>
+        </div>
+        <div class="flex flex-col gap-2">
+            <div>
+              <%= link to: Routes.pointer_path(@conn, :edit, pointer) do %>
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-neutral-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
+                </svg>
+              <% end %>
+            </div>
+            <div>
+              <%= link to: Routes.pointer_path(@conn, :delete, pointer), method: :delete, data: [confirm: "Are you sure?"] do %>
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-neutral-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 8h14M5 8a2 2 0 110-4h14a2 2 0 110 4M5 8v10a2 2 0 002 2h10a2 2 0 002-2V8m-9 4h4" />
+                </svg>
+              <% end %>
+            </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
