--- a/lib/gotik_web/templates/pointer/index.html.heex
+++ b/lib/gotik_web/templates/pointer/index.html.heex
@@ -10,25 +10,29 @@
 
   <%= for pointer <- @pointers do %>
     <div class="bg-neutral-300 rounded-md p-6 text-neutral-800 mb-6 shadow-md">
-      <div class="flex flex-row">
-        <div class="columns-3 mb-4 flex-1">
-          <strong>go/<%= pointer.name %></strong>
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
-          </svg>
-          <span><%= pointer.destination %></span>
+      <div class="flex flex-row w-full">
+        <div class="flex flex-row flex-1 justify-between mb-4 pl-3 gap-2">
+          <div class="font-bold">go/<%= pointer.name %></div>
+          <div class="">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+            </svg>
+          </div>
+          <div class="flex-grow hover:text-red-600">
+            <%= link(pointer.destination, to: URI.parse(pointer.destination)) %>
+          </div>
         </div>
         <div class="flex flex-col gap-2">
             <div>
               <%= link to: Routes.pointer_path(@conn, :edit, pointer) do %>
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-neutral-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-neutral-500 hover:text-neutral-800" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
                 </svg>
               <% end %>
             </div>
             <div>
               <%= link to: Routes.pointer_path(@conn, :delete, pointer), method: :delete, data: [confirm: "Are you sure?"] do %>
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-neutral-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-neutral-500 hover:text-neutral-800" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 8h14M5 8a2 2 0 110-4h14a2 2 0 110 4M5 8v10a2 2 0 002 2h10a2 2 0 002-2V8m-9 4h4" />
                 </svg>
               <% end %>
