--- a/lib/gotik_web/templates/layout/root.html.heex
+++ b/lib/gotik_web/templates/layout/root.html.heex
@@ -16,6 +16,9 @@
           Gootik.xyz go links!
         </h1>
       </div>
+      <nav>
+        <%= render "_user_menu.html", assigns %>
+      </nav>
     </header>
     <div class="container mx-auto">
       <div class="w-4/5 mx-auto">
