--- a/lib/gotik_web/templates/layout/root.html.heex
+++ b/lib/gotik_web/templates/layout/root.html.heex
@@ -9,18 +9,18 @@
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
-  <body class="w-full bg-white text-gray-900">
-    <header class="py-4 mb-6 bg-neutral-800 text-neutral-400">
+  <body class="w-full bg-gray-100 text-gray-900">
+    <header class="py-4 mb-6 bg-gray-800 text-neutral-400">
       <div class="w-4/5 mx-auto flex flex-row justify-center items-center">
         <h1 class="text-xl font-semibold text-white grow">
-          <a href="/">Gootik.xyz go pointers!</a>
+          <a href="/">Gotik</a>
         </h1>
         <nav class="mr-8">
           <%= render "_user_menu.html", assigns %>
         </nav>
       </div>
     </header>
-    <div class="container mx-auto">
+    <div class="container mx-auto mb-24">
       <div class="w-4/5 mx-auto">
         <%= @inner_content %>
       </div>
