--- a/lib/gotik_web/templates/user_settings/edit.html.heex
+++ b/lib/gotik_web/templates/user_settings/edit.html.heex
@@ -17,7 +17,7 @@
         <div class="sm:col-span-4">
           <%= label f, :email, class: "block text-sm font-medium text-gray-700" %>
           <div class="mt-1 flex rounded-md shadow-sm">
-            <%= email_input f, :email, required: true, class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md"%>
+            <%= email_input f, :email, required: true, class: "shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border-gray-300 rounded-md"%>
             <%= error_tag f, :email %>
           </div>
         </div>
@@ -25,7 +25,7 @@
         <div class="sm:col-span-4">
           <%= label f, :current_password, for: "current_password_for_email", class: "block text-sm font-medium text-gray-700" %>
           <div class="mt-1 flex rounded-md shadow-sm">
-            <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_email",  class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
+            <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_email",  class: "shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
             <%= error_tag f, :current_password %>
           </div>
         </div>
@@ -34,7 +34,7 @@
 
     <div class="pt-5">
       <div class="flex justify-end">
-        <%= submit "Change email", class: "ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+        <%= submit "Change email", class: "ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500" %>
       </div>
     </div>
   </div>
@@ -59,7 +59,7 @@
         <div class="sm:col-span-4">
           <%= label f, :password, "New password", class: "block text-sm font-medium text-gray-700" %>
           <div class="mt-1 flex rounded-md shadow-sm">
-            <%= password_input f, :password, required: true, class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
+            <%= password_input f, :password, required: true, class: "shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
             <%= error_tag f, :password %>
           </div>
         </div>
@@ -67,7 +67,7 @@
         <div class="sm:col-span-4">
           <%= label f, :password_confirmation, "Confirm new password", class: "block text-sm font-medium text-gray-700" %>
           <div class="mt-1 flex rounded-md shadow-sm">
-            <%= password_input f, :password_confirmation, required: true, class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
+            <%= password_input f, :password_confirmation, required: true, class: "shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
             <%= error_tag f, :password_confirmation %>
           </div>
         </div>
@@ -75,7 +75,7 @@
         <div class="sm:col-span-4">
           <%= label f, :current_password, for: "current_password_for_password", class: "block text-sm font-medium text-gray-700" %>
           <div class="mt-1 flex rounded-md shadow-sm">
-            <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_password", class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
+            <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_password", class: "shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border-gray-300 rounded-md" %>
             <%= error_tag f, :current_password %>
           </div>
         </div>
@@ -83,7 +83,7 @@
 
       <div class="pt-5">
         <div class="flex justify-end">
-          <%= submit "Change Password", class: "ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+          <%= submit "Change Password", class: "ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500" %>
         </div>
       </div>
     </div>
