--- a/lib/gotik_web/templates/user_registration/new.html.heex
+++ b/lib/gotik_web/templates/user_registration/new.html.heex
@@ -16,7 +16,7 @@
           <%= label f, :email, class: "block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2" %>
           <div class="mt-1 sm:mt-0 sm:col-span-2">
             <div class="max-w-lg flex rounded-md shadow-sm">
-              <%= email_input f, :email, required: true, class: "flex-1 block w-full focus:ring-indigo-500 focus:border-indigo-500 min-w-0 rounded-none rounded-r-md sm:text-sm border-gray-300" %>
+              <%= email_input f, :email, required: true, class: "flex-1 block w-full focus:ring-blue-500 focus:border-blue-500 min-w-0 rounded-none rounded-r-md sm:text-sm border-gray-300" %>
               <%= error_tag f, :email %>
             </div>
           </div>
@@ -26,7 +26,7 @@
           <%= label f, :password, class: "block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2" %>
           <div class="mt-1 sm:mt-0 sm:col-span-2">
             <div class="max-w-lg flex rounded-md shadow-sm">
-              <%= password_input f, :password, required: true, class: "flex-1 block w-full focus:ring-indigo-500 focus:border-indigo-500 min-w-0 rounded-none rounded-r-md sm:text-sm border-gray-300" %>
+              <%= password_input f, :password, required: true, class: "flex-1 block w-full focus:ring-blue-500 focus:border-blue-500 min-w-0 rounded-none rounded-r-md sm:text-sm border-gray-300" %>
               <%= error_tag f, :password %>
             </div>
           </div>
@@ -35,7 +35,7 @@
     </div>
     <div class="pt-5">
       <div class="flex justify-end">
-        <%= submit "Register", class: "ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
+        <%= submit "Register", class: "ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500" %>
       </div>
     </div>
   </div>
